# datamorph_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  dump.rdb  output.txt  pyproject.toml  requirements.txt  session.json  start.sh  test.csv
backend/: core_utils.py  settings.py  urls.py
jobs/: models.py  serializers.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
processing/: llm.py  spark.py  tasks.py
uploads/: models.py  serializers.py  storage.py  urls.py  validators.py  views.py
uploads/migrations/: 0001_initial.py
