[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "dj-database-url>=3.1.2",
    "django>=5.2.15",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "gunicorn>=26.0.0",
    "httpie>=3.2.4",
    "huggingface-hub>=1.21.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.2",
    "python-magic>=0.4.27",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
    "waitress>=3.0.2",
]
